--- a/plugins-config.json
+++ b/plugins-config.json
@@ -5,7 +5,7 @@
     "autoprefixerConfig": ["> 1%", "last 2 versions", "Firefox ESR", "android 4"],
 
     "browserSync": {
-        "proxy": "kreo.dev",
+        "proxy": "scroll-magic",
         // "startPath": "/index.html",
         // "server": {
         //     "baseDir": "./dev"
